Adding orders by month

--- a/assets/css/statistics.css
+++ b/assets/css/statistics.css
@@ -1,4 +1,4 @@
-.statboard .statlistbox {
+.statlistbox {
     background: #fff;
     -webkit-box-shadow: 3px 3px 11px 0 rgb(217 217 217);
     -moz-box-shadow: 3px 3px 11px 0 rgba(217, 217, 217, 1);
